<resources>
    <string name="app_name">Tugas2</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
<string name="err_msg_username">Masukan alamt Email dengan
benar</string>
    <string name="err_msg_password">Masukan Password</string>
    <string name="btn_login">Login</string>
    <string name="profil">Profil</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="angkatan">Angkatan</string>
    <string name="titik_dua">:</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="mobile_programing">Mobile Programing</string>
<string name="rekayasa_perangkat_lunak">Rekayasa Perangkat
Lunak</string>
    <string name="jaringan_komputer">Jaringan Komputer</string>
    <string name="sistem_basis_data">Sistem Basis Data</string>
<string name="pemograman_internet">Pemograman
Internet</string>
    <string name="matematika_distrik">Matematika Distrik</string>
    <string name="ekonomi_teknik">Ekonomi Teknik</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="kembali">Kembali</string>
    <string name="krs_yang_dikontrak">KRS yang Dikontrak</string>

</resources>
