<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.nbs.app.tugas2.KrsActivity">

    <TextView
        android:id="@+id/JudulProfil"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil"/>

    <LinearLayout
        android:layout_below="@+id/JudulProfil"
        android:id="@+id/Lin_Profil1"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:text="@string/nama"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nama"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/Lin_Profil1"
        android:id="@+id/Lin_Profil2"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:text="@string/nim"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nim"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/Lin_Profil2"
        android:id="@+id/Lin_Profil3"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:text="@string/angkatan"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:id="@+id/tv_angkatan"/>
    </LinearLayout>
    <TextView
        android:id="@+id/judul_mata_kuliah"
        android:layout_below="@+id/Lin_Profil3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/mata_kuliah" />
    <CheckBox
        android:layout_below="@id/judul_mata_kuliah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_mobile_programing"
        android:text="@string/mobile_programing"/>
    <CheckBox
        android:layout_below="@id/cb_mobile_programing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_rekayasa_perangkat_lunak"
        android:text="@string/mobile_programing"/>
    <CheckBox
        android:layout_below="@id/cb_rekayasa_perangkat_lunak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_jaringan_komputer"
        android:text="@string/jaringan_komputer"/>
    <CheckBox
        android:layout_below="@id/cb_jaringan_komputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_sistem_basis_data"
        android:text="@string/sistem_basis_data"/>
    <CheckBox
        android:layout_below="@id/cb_sistem_basis_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_pemograman_internet"
        android:text="@string/pemograman_internet"/>
    <CheckBox
        android:layout_below="@id/cb_pemograman_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_data_mining"
        android:text="Data Mining"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_proyek_perangkat_lunak"
        android:text="Proyek Perangkat Lunak"
        android:layout_below="@+id/cb_data_mining"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_selanjutnya"
        android:layout_gravity="right"
        android:text="Next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

</RelativeLayout>
